--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  background-color: rgb(243, 242, 242);
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,56 +11,51 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+.card {
+  height: 350px;
+  width: 400px;
+  box-shadow: 0px 5px 10px lightgrey;;
+  padding: 0px;
+  border-top: solid #1876db;
+  background-color: white;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.card-main-section {
+  border-top: solid rgb(230, 251, 255);
+  height: 66%;
+}
+
+.card-main-section h1 {
+
+  font-size: 30px;
+  font-weight:200;
+}
+
+.card-main-section p {
+  font-size: 25px;
+  font-weight: lighter;
+}
+
+.card-button-section {
+  display: grid;
+  background-color: lightblue;
+  height: 34%;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  font-weight: bold;
+  width: 200px;
+  height: 40%;
+  align-self: center;
+  justify-self: center;
+  background-color:#1876db;
+  border-color: #1876db;
+  color: white;
 }
